--- a/little_matplotlib_cookbook.ipynb
+++ b/little_matplotlib_cookbook.ipynb
@@ -1130,6 +1130,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Line, Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA2YAAAEXCAYAAADGNFezAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHxVJREFUeJzt3X2QZHV9LvDnt7uwKG9CUBB31agkGiGAEE2VXp2AWGA0\niTGIJrnGWCEaK6DXK75Wwqaut7RiYizfohUUMTEYkRTB0oiATIy5KY3gIsp7DGERFORlYUFe93f/\n6F17Zndmtmf6TJ/TPZ9P1dSe0907/d1l9uE855w+p9RaAwAAQHtWtT0AAADASqeYAQAAtEwxAwAA\naJliBgAA0DLFDAAAoGWKGQAAQMuGKmallD1KKd8opWwspVxZSnlPU4MBDEM+AV0km4D5lGHvY1ZK\neXSt9b5SypokX0/yllrr1xuZDmAI8gnoItkEzGXoUxlrrfdtW9w9yeokdwz7PQGaIJ+ALpJNwFyG\nLmallFWllI1JfpTkklrrlcOPBTA8+QR0kWwC5tLEEbOttdYjkqxL8vxSytTQUwE0QD4BXSSbgLms\naeob1Vo3l1K+mOToJNPbHy+lDPchNqCTaq2l7RkGNVc+ySaYXOOST7adYGXZVTYNe1XGA0opj9m2\n/KgkxyX59hxDdPrr9NNPb30GM5pxnGYcB4PkU9t/j5Pws2DGlTPjuMzZdbadzGjGlTnjIIY9Yvb4\nJGeVUlalV/L+ttZ68ZDfE6AJ8gnoItkEzGmoYlZrvSLJsxqaBaAx8gnoItkEzGfoi39MgqmpqbZH\n2CUzNsOMjJNx+FkwYzPGYcZkfOZk+Y3Dz4IZm2HG0Rn6BtO7fINS6nK/BzBapZTUMflw/XxkE0wm\n+QR00SDZ5IgZAABAyxQzAACAlilmAAAALVPMAAAAWqaYAQAAtEwxAwAAaJliBgAA0DLFDAAAoGWK\nGQAAQMsUMwAAgJYpZgAAAC1TzAAAAFqmmAEAALRMMQMAAGiZYgYAANAyxQwAAKBlihkAAEDLFDMA\nAICWKWYAAAAtU8wAAABappgBAAC0TDEDAABomWIGAADQMsUMAACgZYoZAABAyxQzAACAlilmAAAA\nLVPMAAAAWqaYAQAAtEwxAwAAaNlQxayUsr6Uckkp5XullO+WUk5tajCAYcgnoItkEzCfUmtd+m8u\n5aAkB9VaN5ZS9kpyaZLfqLVeNeM1dZj3ALqnlJJaa2l7joXsKp9kE0ymrueTbSdYmQbJpqGOmNVa\nf1hr3bhteUuSq5IcPMz3BGiCfAK6SDYB81nT1DcqpTw5yZFJvtHU9wRognyis2pNnv70tqcYzOte\nl7z5zW1PMVFkEyzCww8nV16ZXHpp7+uaa5J77kn23ju58MK2p2tEI8Vs26H4zyd547a9P9A9pbNn\ntsx2+unJhg1tTzEx5BOdd+21bU8wmB//uO0JJopsggHcfXfyqU8lZ5+dbNyY3H//zq/Zf/+Rj7Vc\nhi5mpZTdkpyb5O9qrefN9ZoNMzYyp6amMjU1NezbAiM0PT2d6enptsdYtF3lk2yC8TeO+WTbCXbh\n2muTD384OfPMZMsu9lvcc89oZlqkpWTTsBf/KEnOSnJ7rfV/zfMaH2ClGxwxa0zXP1yf7DqfZBOd\nUGuyasbHva++ur1ZdmX//ZPHPrbtKXap6/lk2wkWsGlT8sd/nJx//tzPr1uXHH10ctRRyRFHJD/z\nM8leeyWHHtr57bxBsmnYYva8JF9L8p0k27/RO2qtX57xGuFCN8z8B+tncihd3/BJdp1PsolO2LGY\n+ZkcWtfzybYTzKHW5DOf6ZWyzZtnP/eMZySnnJL85m8mBx7YznwNWPZiNuAQwoVuUMwa0/UNn0HI\nJjpBMWucfIIxc/vtyetfn3z+8/3HSkle8pLk1FOTY4/t/NGwQQySTY1dlREAAGBgl16avPSlyS23\n9B97ylOST386ee5z25urJUPdxwwAAGDRLr00eeELZ5eyk09OLr98RZayxBEzAABglLaXsrvu6q3v\nt1/vKNlLXtLuXC1TzAAAgNHYsZTtv39y0UXJkUe2O1cHOJURAABYftdco5QtQDEDAACW1/33Jyed\npJQtQDEDAACW12mn9S7skSRr1yZf+YpStgPFDAAAWD7nnZd8+MP99fe/PznqqPbm6Sg3mGblcIPp\nxriBKzTEDaYbJ5+gYzZtSg4/PLnzzt76y16WnHvuRNw0ejEGySZHzAAAgObVmrzmNf1Stn59csYZ\nK66UDUoxAwAAmnf++clXv9pbXr06Ofvs3kU/mJNiBgAANOuhh5K3vrW//oY3JM99bnvzjAHFDAAA\naNbHP55ce21ved99kz/903bnGQOKGQAA0JzNm5MNG/rr73pXcsABrY0zLhQzAACgOe95T3L77b3l\nJz0pOeWUducZE4oZAADQjB/9KPnAB/rr731vssce7c0zRhQzAACgGR//ePLAA73lo45KTjqp3XnG\niGIGAAAM78EHk7/+6/76W97inmWLoJgBAADDO/fc5Ic/7C0ffHDy8pe3O8+YUcwAAIDhffCD/eXX\nvz7Zbbf2ZhlDpda6vG9QSl3u94CBzDyU7mdyKKWU1FrH+twE2UQn1JqsWjV7naHIJ2jJN7+ZPOc5\nveXdd09uvDE58MB2Z+qQQbLJETMAAGA4H/pQf/mVr1TKlsARM1YOR8waY480NMQRs8bJJ2jBXXf1\nitiDD/bW/+M/kqOPbnemjnHEDAAAWF7nn98vZUceqZQtkWIGAAAs3Tnn9Jfdt2zJnMrIyuFUxsY4\nVQga4lTGxsknGLEdT2P8z/9MnvKUdmfqIKcyAgAAy2fmaYzPepZSNgTFDAAAWJqZpzG+4hXtzTEB\nnMrIyuFUxsY4VQga4lTGxsknGKHNm5PHPc5pjANwKiMAALA8Zp7GeNRRStmQFDMAAGDxvvjF/vKJ\nJ7Y3x4RQzAAAgMXZujX56lf76yec0N4sE2LoYlZK+WQp5UellCuaGAigCbIJ6CLZxMT43veS227r\nLR9wQHLooe3OMwGaOGJ2ZpLjG/g+AE2STUAXySYmw8yjZb/yK7MvZMSSDP03WGv91yR3NjALQGNk\nE9BFsomJcfHF/eVjj21vjgmi2gIAAIN7+OHkX/6lv37MMe3NMkEUMwAAYHCXXZbcfXdved265GlP\na3eeCbFmFG+yYcOGny5PTU1lampqFG8LNGR6ejrT09Ntj9E42QTjTz5BC2aexnjMMUkZ63u6L4ul\nZFNp4s7ypZQnJ/lCrfWwOZ5z93q6YWZo+JkcyiB3r+8C2UTn1Tr7A/N+Joc2Dvm0UDZte14+0W3H\nHZdcdFFv+ayzkle/ut15xsAg2dTE5fLPTvL/kvxcKWVTKeX3h/2eAMOSTUAXySbGXq3Jt77VX3/+\n89ubZcI0csRswTew14eucMSsMeOwR3pXZBOd4IhZ4+QTLLP//u/kyU/uLe+3X3L77U5lHMBIjpgB\nAAArxMaN/eXDD1fKGqSYAQAAg5lZzI44or05JpBiBgAADObyy/vLilmjFDMAAGAwjpgtGxf/YOVw\n8Y/G+HA9NMTFPxonn2AZ3XVX74IfSbLbbsmWLcnuu7c705hw8Q8AAKAZ3/lOf/mZz1TKGqaYAQAA\nu+Y0xmWlmAEAALummC0rxQwAANg1xWxZufgHK4eLfzTGh+uhIS7+0Tj5BMvkwQeTvffu/Zokd9zR\nvxAIu+TiHwAAwPCuvrpfyp70JKVsGShmAADAwtxYetkpZgAAwMIUs2WnmAEAAAu74Yb+8s//fGtj\nTDLFDAAAWNimTf3l9evbm2OCKWYAAMDCbrqpv7xuXXtzTDCXy2flcLn8xrgcNTTE5fIbJ59gGTz0\nULJ2bS+jSknuvz/Zffe2pxorLpcPAAAM55Zb+juODjxQKVsmihkAADA/pzGOhGIGAADMz4U/RkIx\nAwAA5ueI2UgoZgAAwPwcMRsJxQwAAJifI2YjoZgBAADzc8RsJBQzAABgfo6YjYQbTLNyuMF0Y9zA\nFRriBtONk0/QMDeXboQbTAMAAEvn5tIjo5gBAABz8/mykVHMAACAufl82cgoZgAAwNxmHjFTzJaV\nYgYAAMxt5hEzpzIuK8UMAACYmyNmIzN0MSulHF9KubqUcl0p5W1NDAUwLNkEdJV8Yqw4YjYyQxWz\nUsrqJB9OcnySX0jyqlLKM5oYDGCpZBPQVfKJsePiHyMz7BGzZye5vtZ6Q631oSSfTfLrw48FMBTZ\nBHSVfGJ8PPRQ7z5mSe/m0gcf3O48E27YYvaEJDNOPM1N2x4DaJNsArpKPjE+3Fx6pIYtZrWRKQCa\nJZuArpJPjI877+wvH3BAe3OsEGuG/P0/SDLzU4Dr09vzM8uGDRt+ujw1NZWpqakh3xYYpenp6UxP\nT7c9xmLIJlgh5BMsoy1b+st7793eHGNoKdlUal36jptSypok1yQ5NsnNSb6Z5FW11qtmvKYO8x7Q\nmFL6y34mh1JKSa217PqV7ZBNjI1ak1WrZq8zFPkEDfryl5MTTugtv+hFyQUXtDvPGBskm4Y6YlZr\nfbiU8sdJLkiyOsknZgYLQBtkE9BV8omxMvOI2V57tTfHCjHsqYyptf5zkn9uYBaAxsgmoKvkE2ND\nMRupoW8wDQAATCDFbKQUMwAAYGeK2UgpZgAAwM7uuae/rJgtO8UMAADYmcvlj5RiBgAA7MypjCOl\nmAEAADtTzEZKMQMAAHammI2UYgYAAOxMMRspxQwAANiZqzKOlGIGAADszFUZR0oxAwAAduZUxpFS\nzAAAgJ0pZiOlmAEAALPVOruY7blne7OsEIoZAAAw23339cpZkuyxR7JmTbvzrACKGQAAMJsLf4yc\nYgYAAMzm82Ujp5gBAACzKWYjp5gBAACzKWYjp5gBAACzKWYjp5gBAACz3XNPf1kxGwnFDAAAmM1V\nGUdOMQMAAGZzc+mRU8wAAIDZHnywv7x2bXtzrCCKGQAAMNsjj/SXV69ub44VRDEDAABm27q1v7xK\nZRgFf8sAAMBsjpiNnGIGAADMppiNnGIGAADMppiNnGIGAADM5jNmI+dvGQAAmM0Rs5FTzAAAgNkU\ns5FTzAAAgNkUs5FbcjErpZxYSvleKeWRUsqzmhwKYBjyCegi2cRY8RmzkRvmb/mKJC9L8rWGZgFo\ninwCukg2MT4cMRu5NUv9jbXWq5OklNLcNAANkE9AF8kmxopiNnJLLmYAMLFqTR58MNmypf91zz2z\n13d8/N57k4cf7m3MzPzaunXhdYDFeOSRXt4Mmk1btiQPPLC4XNq6Nbn66v57KmYjsWAxK6VcmOSg\nOZ56Z631C8sz0ojZawVjaUXkE0uzdWty223JTTclP/hBcvfd82+8LLRB8/DDbf9JGEOyiQXde28v\nmzZtSm6/fWnZ9JOfjH5unzEbiQWLWa31uCbeZMOGDT9dnpqaytTUVBPfFhiR6enpTE9Ptz3GLE3k\nk2waQzNL16ZNvV9nLm/a1CtjDz7Y9qSMSNfyybbTCjazdM336113tT3l0jhitmhLyaZSax3qTUsp\nlyR5S6310nmer8O+x7JyxGxl6vLP5BgopaTW2vl/PAvlU+ezaSWaq3Tt+OsoS9eaNcneeyd77dX/\n2nF95uN77pnstltvz/Lq1f2vxaw/97mj+bNNsHHIp7HfdlqJ7r13/p1BbZSuuTJovmzaa69k7dql\n59Lq1ckhhyQHHji6P98EGiSbllzMSikvS/LBJAck2Zzk27XWE+Z4XbfDZWYx6/Kc0CFd3/AZJJ86\nn02T7Cc/Sb773eTyy5ONG3vLN97YbOl6zGOS9euTJzwh2X//wTZcdnxs992bmYWR6nI+Tcy206Sq\nNbnhhl4ubc+n73+/2dK1227JunW9rwMP7OfPfDk0V2Y9+tFOLRxDy1rMFjFEt8NFMYNF6/KGz6A6\nn02T4tZb+xs427+uvnr2/XEWa3vpWrdu51+3f+21V3N/BsaKfGIgDzyQXHnl7Gy6/PJk8+alf8+Z\npWu+jHrsY5WqFWqQbHJVRgCGt3Vrcv31O2/k3Hzz4r7PzNI1X/FSuoDFuP32nXcQXXXV4i7ws1Dp\n2r6sdDEkxQyAxdu6NfnOd5KvfrX39bWv9a4WNohSkqc9LTniiN7X4YcnT32q0gU049Zbk+np5OKL\ne/l0/fWD/9799utn0xFHJM94RvLEJypdjIRiBsCu1Zpcd11vI+fii5NLLunthd6VRz0qOeyw2Rs6\nhx2mgAHN2by5t3Noez5dccVgv++pT+3tGJqZT+vWuTAcrVHMAJjbQw/1NnI+//nkggt6Vx5byOMe\nlxx55OyNnEMOcZlloHnXXZecc05y/vnJt7618M3a165NDj10djb94i8m++wzunlhAIoZAH3by9g5\n5yTnnZfcccf8r33sY5NjjkmOPbb361OeYk8zsHy2l7Fzzul9Tmw+a9Ykv/zL/Xx6znN65Qw6TjED\nWOkGLWP77JNMTfU2do45prcHWhEDltP11yef+9zCZayU3tH67TuJnvc8p0szlhQzgJXqttuSv/mb\n5KMf7d1DbC7r1ycnnpi8/OXJs5/d2xMNsJweeST50peSD34wueiiuV+zdm1y/PG9fDrhhN79CmHM\n+T8swEpz2WXJhz6UnH12714+O9pexk48sXcKkKNiwCjcdVfyyU8mH/lI78bOO5pZxl76Up8RY+Io\nZgArwSOPJOee29sD/W//tvPzBx6Y/M7vKGPA6F19dS+bzjorue++2c+tWpX86q8mJ52kjDHxFDOA\nSVZr74qKp52WfPe7Oz//S7+UvPGNyW/9lg/HA6N1yy3Jn/xJcuaZvXsjzrTffsnJJydveEPypCe1\nMx+MmGIGMKkuv7xXyC68cPbja9Ykr3hFcuqpvaNjAKN0773JX/xF8ud/vvMRssMO62XTb/928uhH\ntzMftEQxA5g0N9/c3wtda//xPfdM3vSm3h7ogw9ubz5gZXrkkeRTn+rl0y23zH7uRS9K3vGO5AUv\ncCo1K5ZiBjApak0+8YneqYkz90KvWpX8wR8kf/ZnyUEHtTcfsHJdf33yqlf1bgY902GH9Y6evehF\n7cwFHaKYAUyCzZuT170u+Yd/mP34i1/cO13omc9sZy6Az3wmef3rky1b+o89/vHJu9+d/N7vJatX\ntzcbdIhiBjDuvvnN5JWvTP7rv/qPPeMZvaucvfCF7c0FrGxbtiSnnNI7fXG73XZL3vnO3udf99yz\ntdGgixQzgHFVa/L+9ydvf3vy8MP9x//wD5O/+isfnAfac8UVvdtvXHNN/7GnPS357GeTo45qby7o\nMMUMYBzVmrztbcn73td/bJ99kjPO6G0MAbTl0kt7R+vvuqv/2O/+bvLRjyZ7793eXNBxihnAuJmr\nlD3nOcnZZyc/+7PtzQWwYynbc89eIXv1q9udC8aAYgYwTuYqZS97We/0oN13b28ugB1L2f77Jxdd\nlBx5ZLtzwZhY1fYAACzC29+ulAHdc9llShkMqdSZNx9djjcopS73ewxl5k0MuzwndEgpJbXWsb4D\naOezaS6f+1xy0kn9daUMdiKfWnD33cnhhyc33NBbV8pgJ4NkkyNmAOPg5pt79wHa7td+TSkDuuFN\nb+qXsn33VcpgiRQzgK6rNXnta5M77+ytP/GJyac/rZQB7funf0rOPLO//rGPKWWwRIoZQNd97GPJ\nBRf0lkvplbJ99213JoBbb01OPrm//spX9r6AJVHMALrsjjuS007rr7/5zckLXtDePADbveMdyW23\n9ZYPPjj5yEfanQfGnGIG0GWf+ERy77295ac/PXn3u9udByDpFbLPfKa/fsYZvYt+AEummAF01cMP\nJx/+cH/9rW9N9tijvXkAtjvjjOSBB3rLRx+dHH98u/PABFDMALrqC19Ibryxt3zAAcmrXtXuPABJ\n8tBDyUc/2l8/9dTZtx8ClkQxA+iqD32ov3zyyY6WAd1w3nnJTTf1lh/3uOQVr2h3HpgQihlAF911\nV3LJJb3lVauSP/qjducB2O688/rLr3tdsnZte7PABFHMALrossv6y4cfnqxf394sADNdeml/+cUv\nbm8OmDCKGUAXzdzwOeqo9uYAmOnuu5Nrr+0tr17d23EENGLJxayU8r5SylWllMtLKf9YSnG3U6AT\nJiKfFDOYOBORTd/+dlJrb/kXfiF51KPanQcmyDBHzL6S5Jm11sOTXJvkHc2MBDC08c8nxQwm0WRl\n09FHtzcHTKAlF7Na64W11q3bVr+RZF0zIwEMZ+zzqdbk+9/vrx92WHuzAI0Z+2xKZmfToYe2NwdM\noKY+Y/baJF9q6HsBNGn88un++5Ot27bd1q51mXyYTOOXTUmyZUt/eb/92psDJtCahZ4spVyY5KA5\nnnpnrfUL217zriQP1lr/fhnmA5jTROfTQw8lxx3X2wBavbrtaYBFmOhsSpKf+7nk+c9P7rknefzj\n254GJsqCxazWetxCz5dSXpPkxUmOXeh1GzZs+Ony1NRUpqamBp1v+Z1+etsTQOdNT09nenq67TFm\naSKfOptN++yTfOUrbU8BY6Fr+TTx207vfGfvC1jQUrKp1O1X1lmkUsrxSf4yyQtqrT9e4HV1qe8B\ndFMpJbXW0vYc8xkkn2QTTKYu55NtJ1i5BsmmYYrZdUl2T3LHtof+vdb6hjleJ1xgwnR5wycZLJ9k\nE0ymLueTbSdYuZa1mC1iCOECE6bLGz6Dkk0wmeQT0EWDZFNTV2UEAABgiRQzAACAlilmAAAALVPM\nAAAAWqaYAQAAtEwxAwAAaJliBgAA0DLFDAAAoGWKGQAAQMsUMwAAgJYpZgAAAC1TzAAAAFqmmAEA\nALRMMQMAAGiZYgYAANAyxQwAAKBlihkAAEDLFDMAAICWKWYAAAAtU8wAAABappgBAAC0TDEDAABo\nmWIGAADQMsUMAACgZYoZAABAyxQzAACAlilmAAAALVPMAAAAWqaYAQAAtEwxAwAAaJliBgAA0DLF\nDAAAoGVLLmallP9TSrm8lLKxlHJxKWV9k4MBLJV8ArpINgELGeaI2Z/XWg+vtR6R5Lwkpzc008hN\nT0+3PcIumbEZZlwxJiKfxuFnwYzNGIcZk/GZs8MmIpuS8fhZMGMzzDg6Sy5mtdZ7ZqzuleTHw4/T\njnH4j2nGZphxZZiUfBqHnwUzNmMcZkzGZ86umpRsSsbjZ8GMzTDj6KwZ5jeXUv5vkv+Z5L4kv9zI\nRAANkE9AF8kmYD4LHjErpVxYSrlijq+XJkmt9V211icm+VSSvxrBvABJ5BPQTbIJWKpSax3+m5Ty\nxCRfqrUeOsdzw78B0Dm11tL2DIOYL59kE0yuccgn206w8uwqm5Z8KmMp5ZBa63XbVn89ybeXMgBA\n0wbJJ9kEjJptJ2AhSz5iVkr5fJKfT/JIkv9M8ke11lsbnA1gSeQT0EWyCVhII6cyAgAAsHTD3Mds\nYONwQ8VSyvtKKVdtm/MfSyn7tj3TjkopJ5ZSvldKeaSU8qy255mplHJ8KeXqUsp1pZS3tT3Pjkop\nnyyl/KiUckXbs8ynlLK+lHLJtv/G3y2lnNr2TDsqpexRSvnGtn/LV5ZS3tP2TMOQTc2QTUsnm5oh\nm9rR9XySTcORT81YTD6N5IhZKWXv7ffuKKWckuTwWusfLPsbL0Ip5bgkF9dat5ZS3psktda3tzzW\nLKWUpyfZmuTjSf53rfWylkdKkpRSVie5JskLk/wgyX8keVWt9apWB5uhlPI/kmxJ8ula62FtzzOX\nUspBSQ6qtW4speyV5NIkv9Glv8ckKaU8utZ6XyllTZKvJ3lLrfXrbc+1FLKpGbJp6WRTc2TT6HU9\nn2TTcORTcwbNp5EcMRuHGyrWWi+stW7dtvqNJOvanGcutdara63Xtj3HHJ6d5Ppa6w211oeSfDa9\nDzV3Rq31X5Pc2fYcC6m1/rDWunHb8pYkVyU5uN2pdlZrvW/b4u5JVie5o8VxhiKbmiGblk42NUc2\njV7X80k2DUc+NWfQfBpJMUt6N1QspdyY5PeSvHdU77tEr03ypbaHGCNPSLJpxvpN2x5jiUopT05y\nZHr/o+uUUsqqUsrGJD9Kckmt9cq2ZxqGbJposqlhsml0xiybEvm0GLJpGUxCPi35cvlzvOGFSQ6a\n46l31lq/UGt9V5J3lVLent4NFX+/qfce1K5m3PaadyV5sNb69yMdbptBZuwgV5Bp0LZD8Z9P8sZt\ne386Zdve0SO2fZbgglLKVK11uuWx5iWbmiGbkE3NGodsSrqfT7KJZHLyqbFiVms9bsCX/n1a2qOy\nqxlLKa9J8uIkx45koDks4u+xS36QZOYHk9ent/eHRSql7Jbk3CR/V2s9r+15FlJr3VxK+WKSo5NM\ntzzOvGRTM2TTyiabmjcO2ZR0P59kE5OUT6O6KuMhM1bnvaFim0opxyc5Lcmv11rvb3ueAXTp5pPf\nSnJIKeXJpZTdk5yU5PyWZxo7pZSS5BNJrqy1fqDteeZSSjmglPKYbcuPSnJcOvjveVCyaVnIpgkj\nm0ZvHLIpGbt8kk0TaNLyaVRXZez8DRVLKdel94G87R/G+/da6xtaHGknpZSXJflgkgOSbE7y7Vrr\nCe1O1VNKOSHJB9L7QOMnaq2dulRxKeXsJC9I8jNJbk3yp7XWM9udarZSyvOSfC3Jd9I/zeEdtdYv\ntzfVbKWUw5Kcld5OnVVJ/rbW+r52p1o62dQM2bR0sqkZsqkdXc8n2TQc+dSMxeSTG0wDAAC0bGRX\nZQQAAGBuihkAAEDLFDMAAICWKWYAAAAtU8wAAABappgBAAC0TDEDAABomWIGAADQsv8PE+HmYHRL\n+cAAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10758a240>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig, ax = plt.subplots(1, 3, figsize = (15, 5))\n",
+    "\n",
+    "ax[0].set(title = \"\", aspect = 1., xlim = (-3, 3), ylim = (-3, 3))\n",
+    "# first, build the path\n",
+    "vertices = [[-2, -2], [-2, -1], [1, -1], [1, 2], [2, 2]]\n",
+    "codes = [patches.Path.MOVETO] + (len(vertices) - 1) * [patches.Path.LINETO]\n",
+    "path = patches.Path(vertices, codes)\n",
+    "# then, build patch\n",
+    "patch = patches.PathPatch(path, edgecolor = \"red\", lw = 3, fill = False)\n",
+    "# finally, add it to axes\n",
+    "_tmp = ax[0].add_patch(patch)\n",
+    "\n",
+    "ax[1].set(title = \"\", aspect = 1., xlim = (-3, 3), ylim = (-3, 3))\n",
+    "# first, build the path\n",
+    "vertices = [[-2, -2], [-2, -1], [1, -1], [1, 2], [2, 2]]\n",
+    "codes = [patches.Path.MOVETO, patches.Path.CURVE3, patches.Path.LINETO, patches.Path.LINETO, patches.Path.LINETO]\n",
+    "path = patches.Path(vertices, codes)\n",
+    "# then, build patch\n",
+    "patch = patches.PathPatch(path, edgecolor = \"red\", lw = 3, fill = False)\n",
+    "# finally, add it to axes\n",
+    "_tmp = ax[1].add_patch(patch)\n",
+    "\n",
+    "\n",
+    "ax[2].set(title = \"\", aspect = 1., xlim = (-3, 3), ylim = (-3, 3))\n",
+    "# first, build the path\n",
+    "vertices = [[-2, -2], [-2, -1], [1, -1], [1, 2], [2, 2]]\n",
+    "codes = [patches.Path.MOVETO, patches.Path.CURVE3, patches.Path.LINETO, patches.Path.CURVE3, patches.Path.LINETO]\n",
+    "path = patches.Path(vertices, codes)\n",
+    "# then, build patch\n",
+    "patch = patches.PathPatch(path, edgecolor = \"red\", lw = 3, fill = False)\n",
+    "# finally, add it to axes\n",
+    "_tmp = ax[2].add_patch(patch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
